# conda-self

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  tests.yml
conda_self/: __init__.py  constants.py  exceptions.py  install.py  package_info.py  plugin.py  query.py  reset.py  validate.py
conda_self/cli/: __init__.py  common.py  main_install.py  main_protect.py  main_remove.py  main_reset.py  main_update.py
conda_self_update/: __init__.py  cli.py  plugin.py  query.py  update.py  validate.py
docs/: conf.py  index.md  robots.txt
recipe/: meta.yaml
tests/: conftest.py  test_cli.py  test_cli_install.py  test_cli_protect.py  test_cli_remove.py  test_cli_reset.py  test_cli_update.py  test_protect.py
